<resources>
    <!--  Application Details  -->
    <string name="app_name">Journey Journal</string>
    <!--  Args  -->
    <string name="args_show_toolbar">showToolBar</string>
    <string name="args_show_bottom_navigation_view">showBottomNavigation</string>
    <string name="args_add_edit_isAdd">isAdd</string>
    <!--  Labels  -->
    <string name="label_journey">Journey\'s</string>
    <string name="label_uploading">Uploading Image...</string>
    <string name="label_send_reset_link">Reset Password</string>
    <string name="label_update_profile">Update Profile</string>
    <!--  Page Labels  -->
    <string name="page_map">Map</string>
    <string name="page_login">Login</string>
    <string name="page_register">Register</string>
    <string name="page_forgot_password">Forgot password?</string>
    <string name="page_profile">Profile</string>
    <string name="page_about">About</string>
    <string name="page_home">Home</string>
    <string name="page_journey">Journey</string>
    <string name="page_view_journey">View Journey</string>
    <string name="page_add_journey">Add Journey</string>
    <string name="page_update_journey">Update Journey</string>
    <!--  Icon Label  -->
    <string name="icon_home">Home</string>
    <string name="icon_profile">@string/page_profile</string>
    <string name="icon_about">@string/page_about</string>
    <string name="icon_logout">Log Out</string>
    <string name="icon_search">Search</string>
    <!--  Form Fields  -->
    <string name="field_auth_name">Name</string>
    <string name="field_page_title"> </string>
    <string name="field_auth_email">Email</string>
    <string name="field_auth_image">Image</string>
    <string name="field_auth_password">Password</string>
    <string name="field_auth_retype_password">Retype-password</string>
    <string name="field_journey_image">@string/field_auth_image</string>
    <string name="field_journey_address">Address</string>
    <string name="field_journey_date">Date</string>
    <string name="field_journey_title">Title</string>
    <string name="field_journey_description">Description</string>
    <!--  Options  -->
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="option_ok">Ok</string>
    <!--  Buttons  -->
    <string name="button_name">Add</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_google">Google</string>
    <string name="button_twitter">Twitter</string>
    <string name="button_update">Update</string>
    <string name="button_share">Share</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_location">Location</string>
    <string name="button_update_location">Update Location</string>
    <string name="button_show_on_map">View Map</string>
    <string name="button_add_journey">Add journey</string>
    <string name="button_login">@string/page_login</string>
    <string name="button_logout">@string/icon_logout</string>
    <string name="button_reset">@string/redirect_reset</string>
    <string name="button_register">@string/page_register</string>
    <!--  Message  -->
    <string name="message_login_success">Login successful.</string>
    <string name="message_login">Please Login First.</string>
    <string name="message_required">Required *</string>
    <string name="message_login_with">Or login with</string>
    <string name="message_working_on_twitter">We are currently working on Twitter, Please use default Login/Register Approach. \n Sorry for your Inconvenience. 🙂</string>
    <string name="message_working_on_google">We are currently working on Google, Please use default Login/Register Approach. \n Sorry for your Inconvenience. 🙂</string>
    <string name="message_register_using">Or register using</string>
    <string name="message_journey_empty">Journey Not Found!</string>
    <string name="message_landing_get_started">Let\'s get started</string>
    <string name="message_reset_email_sent">Email sent Successfully, Check your email.</string>
    <string name="message_reset_email_sent_and_logout">Logging Out, Check your email.</string>
    <string name="message_reset_email">Don\'t Worry, We will send you a reset email.</string>
    <string name="message_remember_password">Remember password?</string>
    <string name="message_welcome">Welcome your memories and expeditions.</string>
    <string name="message_welcome_back">Welcome back, Let\'s get started.</string>
    <string name="message_login_invalid_credentials">Invalid email or password.</string>
    <string name="message_new_user">New user?</string>
    <string name="message_opening_camera">Opening Camera</string>
    <string name="message_opening_gallery">Opening Gallery</string>
    <string name="message_extracting_location">Extracting Location</string>
    <string name="message_have_account">Have account?</string>
    <string name="message_back_to_login">Back to login?</string>
    <string name="message_journey_not_found">Journeys Not Found!</string>
    <!--  Success  -->
    <string name="success_register">User Registered Successfully, Please Login!</string>
    <!--  Failure  -->
    <string name="failure_register">Problem Registering User! Please try again later</string>
    <!--  Connectivity  -->
    <string name="connection_offline">Internet Disconnected! Please Check your Internet Connection.</string>
    <string name="connection_wifi">Wifi Connected! Online mode enabled</string>
    <string name="connection_data">Mobile Data Connected! Online mode enabled</string>
    <!--  Error  -->
    <string name="error_invalid_name">Name is Required!</string>
    <string name="error_empty_email">Email Address is Required!!</string>
    <string name="error_empty_title">Journey Title is Required!!</string>
    <string name="error_empty_description">Journey Description is Required!!</string>
    <string name="error_invalid_email">Invalid Email Format!</string>
    <string name="error_password_length">Password expects 6–20 characters.</string>
    <string name="error_empty_retype_password">Retype-Password is Empty!</string>
    <string name="error_empty_password">Password is Required!</string>
    <string name="error_password_not_match">Password Not Matched!</string>
    <string name="error_invalid_password_format">Invalid Password Format! Expect [a-zA-Z0-9@#$%] from 6-20.</string>
    <!--  Redirects  -->
    <string name="redirect_reset">Reset</string>
    <string name="redirect_create">Create</string>
    <!--  Message  -->
    <string name="message_check_email">Please! Check your email.</string>
    <string name="message_query_hint">Search title or description</string>
    <!--  Confirmation  -->
    <string name="confirmation_exit">Exit confirmation!</string>
    <string name="confirmation_internet_disconnected">Internet Disconnected!</string>
    <string name="confirmation_working_on_it">We are working on it!</string>
    <string name="confirmation_logout">Log Out confirmation!</string>
    <string name="confirmation_delete">Delete confirmation!</string>
    <!--  Consent  -->
    <string name="consent_exit">Do you really want to exit?</string>
    <string name="consent_logout">Are you sure you want to logout?</string>
    <string name="consent_delete_journey">Are you sure you want to delete your journey?</string>
    <string name="consent_sure_consent">Are you sure?</string>
    <!--  Dummy text  -->
    <string name="about_app">
    Hi there let\'s welcome your memories and expeditions, in one and only Journey Journal App. Journey Journal App is a a personalized platform to record your journeys, adventures and  your memories. I am Dibesh Raj Subedi, founder and creator of "Journey Journal" App 👩‍💻 and I welcome you from bottom of my heart ♥. \n\n
   </string>
    <string name="dummy_lorem">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</string>
</resources>