<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/icon_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/icon_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_about"
        android:icon="@drawable/ic_info"
        android:title="@string/icon_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/icon_logout"
        app:showAsAction="ifRoom" />
</menu>