<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_bottom_nav_graph"
    app:startDestination="@id/journeysFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.ismt.dibeshrajsubedi.journeyjournal.views.fragments.home.about.AboutFragment"
        android:label="@string/page_about"
        tools:layout="@layout/fragment_about">
        <argument
            android:name="@string/args_show_toolbar"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="@string/args_show_bottom_navigation_view"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ismt.dibeshrajsubedi.journeyjournal.views.fragments.home.profile.ProfileFragment"
        android:label="@string/page_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="@string/args_show_toolbar"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="@string/args_show_bottom_navigation_view"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/journeysFragment"
        android:name="com.ismt.dibeshrajsubedi.journeyjournal.views.fragments.home.home.HomeFragment"
        android:label="@string/page_journey"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/args_show_toolbar"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="@string/args_show_bottom_navigation_view"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/action_journeysFragment_to_viewFragment"
            app:destination="@id/viewFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.ismt.dibeshrajsubedi.journeyjournal.views.fragments.home.add_edit.AddEditFragment"
        android:label="fragment_add"
        tools:layout="@layout/fragment_add_edit">
        <argument
            android:name="@string/args_show_toolbar"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="@string/args_show_bottom_navigation_view"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="@string/args_add_edit_isAdd"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/viewFragment"
        android:name="com.ismt.dibeshrajsubedi.journeyjournal.views.fragments.home.view.ViewFragment"
        android:label="@string/page_view_journey"
        tools:layout="@layout/fragment_view">
        <argument
            android:name="@string/args_show_toolbar"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="@string/args_show_bottom_navigation_view"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_viewFragment_to_addEditFragment"
            app:destination="@id/addEditFragment" />
    </fragment>

</navigation>