<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.authentication.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_medium"
        android:layout_marginBottom="@dimen/dp_medium"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_large"
        android:paddingRight="@dimen/dp_large"
        android:paddingBottom="@dimen/dp_medium">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_medium"
            android:layout_marginBottom="@dimen/dp_medium"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_extra_medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_background_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ib_150"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_medium">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/page_login"
                android:textSize="@dimen/sp_extra_medium"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ltil_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                android:hint="@string/field_auth_email"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ltil_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_auth_password"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/tb_password_max_len"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="@integer/tb_password_max_len" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/page_forgot_password"
                android:textColor="@color/primaryLightColor"
                android:textSize="@dimen/sp_medium"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_small"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableTint="@color/white"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_medium"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_small"
            android:text="@string/message_login_with"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_medium"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_google"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/btn_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_medium"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_twitter"
                android:src="@drawable/ic_twitter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_small"
            android:layout_marginBottom="@dimen/dp_medium"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_small"
                android:text="@string/message_new_user"
                android:textSize="@dimen/sp_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/page_register"
                android:textColor="@color/primaryLightColor"
                android:textSize="@dimen/sp_medium"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
