<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.authentication.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_medium"
        android:layout_marginBottom="@dimen/dp_medium"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_large"
        android:paddingRight="@dimen/dp_large"
        android:paddingBottom="@dimen/dp_medium">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_medium"
            android:layout_marginBottom="@dimen/dp_medium"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_extra_medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_background_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ib_200"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_img_forgot_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/page_forgot_password"
                android:textSize="@dimen/sp_extra_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                android:layout_gravity="center"
                android:text="@string/message_reset_email"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ftil_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_small"
                android:hint="@string/field_auth_email"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_small"
                android:drawableLeft="@drawable/ic_send"
                android:drawableTint="@color/white"
                android:text="@string/button_reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_medium"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_small"
                    android:text="@string/message_remember_password"
                    android:textSize="@dimen/sp_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/page_login"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="@dimen/sp_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>