<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_small"
    app:cardElevation="@dimen/dp_small"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="@dimen/ib_150"
            android:layout_height="@dimen/ib_150"
            android:layout_gravity="center"
            android:contentDescription="@string/field_journey_image"
            android:elevation="@dimen/dp_small"
            android:paddingRight="@dimen/dp_extra_small"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_journey_default" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_small"
                android:drawablePadding="@dimen/dp_small"
                android:layout_marginRight="@dimen/dp_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_journey_title"
                android:textSize="@dimen/sp_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                android:layout_marginRight="@dimen/dp_medium"
                android:layout_marginLeft="@dimen/dp_small"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/field_journey_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_small"
                android:layout_marginEnd="152dp"
                android:drawablePadding="@dimen/dp_small"
                android:gravity="center"
                android:text="@string/field_journey_date"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>